--- a/001Hello_World/Makefile
+++ b/001Hello_World/Makefile
@@ -1,1 +1,12 @@
 obj-m := main.o
+
+ARCH=arm
+CROSS_COMPILE=arm-linux-gnueabihf-
+KERNEL_DIR=/home/ark/linux_workspace/embedded_linux_workspace/ldd/source/linux
+
+all:
+	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNEL_DIR) M=$(PWD) modules
+clean:
+	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNEL_DIR) M=$(PWD) clean
+help:
+	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNEL_DIR) M=$(PWD) help
