--- a/001Hello_World/Makefile
+++ b/001Hello_World/Makefile
@@ -3,6 +3,7 @@ obj-m := main.o
 ARCH=arm
 CROSS_COMPILE=arm-linux-gnueabihf-
 KERNEL_DIR=/home/ark/linux_workspace/embedded_linux_workspace/ldd/source/linux
+HOST_KERNEL_DIR=/lib/modules/$(shell uname -r)/build/
 
 all:
 	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNEL_DIR) M=$(PWD) modules
@@ -10,3 +11,5 @@ clean:
 	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNEL_DIR) M=$(PWD) clean
 help:
 	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNEL_DIR) M=$(PWD) help
+host:
+	make -C $(HOST_KERNEL_DIR) M=$(PWD) modules
