--- a/001Hello_World/Makefile
+++ b/001Hello_World/Makefile
@@ -13,3 +13,5 @@ help:
 	make ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) -C $(KERNEL_DIR) M=$(PWD) help
 host:
 	make -C $(HOST_KERNEL_DIR) M=$(PWD) modules
+16 transfer:
+	scp *.ko debian@192.168.7.2:modules
